--- a/labs/lab-03/solution/catalog-service/appsettings.json
+++ b/labs/lab-03/solution/catalog-service/appsettings.json
@@ -15,7 +15,7 @@
         "UseSQLite": false,
         "ConnectionStrings": {
             "SQLiteDBConnection": "Data Source=./food.db",
-            "SQLServerConnection": "Server=tcp:aznativesql.database.windows.net,1433;Initial Catalog=aznative-food-catalog;Persist Security Info=False;User ID=aznativeadmin;Password=TiTp4@zureSQL;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+            "SQLServerConnection": "Server=tcp:aznativesqlpeter.database.windows.net,1433;Initial Catalog=aznativesql;Persist Security Info=False;User ID=aznativeadmin;Password=P@ssw0rd4peter;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
         }
     },
     "Logging": {
